# pl-superlink

./: Dockerfile  README.md  app.py  requirements.txt  setup.py
fedmed_flower_app/: __init__.py  pyproject.toml  server_app.py
fedmed_flower_app/fedmed_flower_app/: __init__.py  client_app.py  pyproject.toml  task.py
